--- a/Assets/Scripts/Common/UI Toolkit/USS/MainMenu.uss
+++ b/Assets/Scripts/Common/UI Toolkit/USS/MainMenu.uss
@@ -2,7 +2,6 @@
    width:100%;
    height:100%;
    margin:0;
-   color: #FFFFFF;
    background-image: url('project://database/Assets/Resources/UI/MainMenu/Highborne_Conflicts_Main_Artwork.png');
 }
 
@@ -34,6 +33,7 @@
     border-color: rgba(247,199,16, 1);
     margin-bottom: 10px;
     justify-content: center;
+    font-size: 180%;
 }
 
 .menu-button:hover {
